resized adopt-button-div to prevent text jumping

--- a/src/Components/PetView.css
+++ b/src/Components/PetView.css
@@ -27,3 +27,7 @@
   max-width: 250px;
   padding-top: 30px;
 }
+
+.adopt-button {
+  min-height: 35px;
+}
